--- a/Voice Effects Demo/Base.lproj/Main.storyboard
+++ b/Voice Effects Demo/Base.lproj/Main.storyboard
@@ -1,8 +1,101 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6Rd-Op-Euk">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="Rpb-Ct-vkm">
+            <objects>
+                <viewController id="6Rd-Op-Euk" customClass="ViewController" customModule="Voice_Effects_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nQd-Ae-fbm"/>
+                        <viewControllerLayoutGuide type="bottom" id="45z-T5-KAx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tRh-yj-3Jh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AaQ-WQ-g44">
+                                <rect key="frame" x="275" y="285" width="49" height="30"/>
+                                <state key="normal" title="Record"/>
+                                <connections>
+                                    <action selector="recordButtonTapped" destination="6Rd-Op-Euk" eventType="touchUpInside" id="3to-aw-YkJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJv-SX-drb">
+                                <rect key="frame" x="260" y="431" width="80" height="30"/>
+                                <state key="normal" title="Add Effects"/>
+                                <connections>
+                                    <action selector="addVoiceEffects" destination="6Rd-Op-Euk" eventType="touchUpInside" id="8B3-JS-oOx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AaQ-WQ-g44" firstAttribute="centerX" secondItem="tRh-yj-3Jh" secondAttribute="centerX" id="VvY-ZG-bps"/>
+                            <constraint firstItem="AaQ-WQ-g44" firstAttribute="centerY" secondItem="tRh-yj-3Jh" secondAttribute="centerY" id="dp8-ST-fZA"/>
+                            <constraint firstItem="DJv-SX-drb" firstAttribute="top" secondItem="AaQ-WQ-g44" secondAttribute="bottom" constant="116" id="sWT-HO-IDk"/>
+                            <constraint firstItem="DJv-SX-drb" firstAttribute="centerX" secondItem="tRh-yj-3Jh" secondAttribute="centerX" id="xrF-dk-B7C"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="9pz-39-pGC" kind="show" identifier="showPlayAudio" id="GWj-hp-f9e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="foD-3E-nh7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-25" y="398"/>
+        </scene>
+        <!--Play Audio View Controller-->
+        <scene sceneID="E5d-HS-Wqh">
+            <objects>
+                <viewController id="9pz-39-pGC" customClass="PlayAudioViewController" customModule="Voice_Effects_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hZx-YU-IhE"/>
+                        <viewControllerLayoutGuide type="bottom" id="tRz-zL-5cK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BIv-3K-hvx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jaa-RJ-T8j">
+                                <rect key="frame" x="265" y="205" width="70" height="30"/>
+                                <state key="normal" title="Chipmunk"/>
+                                <connections>
+                                    <action selector="playChipmunk:" destination="9pz-39-pGC" eventType="touchUpInside" id="jsQ-Xp-myG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yth-mr-gwT">
+                                <rect key="frame" x="258.5" y="285" width="83" height="30"/>
+                                <state key="normal" title="Darth Vader"/>
+                                <connections>
+                                    <action selector="playDarthVader:" destination="9pz-39-pGC" eventType="touchUpInside" id="Kjz-vy-wb1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OKd-d0-qRL">
+                                <rect key="frame" x="274.5" y="374" width="51" height="30"/>
+                                <state key="normal" title="Testing"/>
+                                <connections>
+                                    <action selector="playTesting" destination="9pz-39-pGC" eventType="touchUpInside" id="7Rf-Pd-I0U"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Jaa-RJ-T8j" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="9i3-1r-Pw1"/>
+                            <constraint firstItem="OKd-d0-qRL" firstAttribute="top" secondItem="Yth-mr-gwT" secondAttribute="bottom" constant="59" id="Jb1-wA-BGf"/>
+                            <constraint firstItem="OKd-d0-qRL" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="WIU-vl-c5c"/>
+                            <constraint firstItem="Yth-mr-gwT" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="a3O-aK-dIK"/>
+                            <constraint firstItem="Yth-mr-gwT" firstAttribute="centerY" secondItem="BIv-3K-hvx" secondAttribute="centerY" id="gpc-tX-aje"/>
+                            <constraint firstItem="Yth-mr-gwT" firstAttribute="top" secondItem="Jaa-RJ-T8j" secondAttribute="bottom" constant="50" id="h15-qW-4zK"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QWZ-6I-np0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="674" y="398"/>
+        </scene>
+    </scenes>
 </document>
