--- a/Voice Effects Demo/Base.lproj/Main.storyboard
+++ b/Voice Effects Demo/Base.lproj/Main.storyboard
@@ -61,41 +61,110 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jaa-RJ-T8j">
-                                <rect key="frame" x="265" y="205" width="70" height="30"/>
+                                <rect key="frame" x="265" y="132" width="70" height="30"/>
                                 <state key="normal" title="Chipmunk"/>
                                 <connections>
                                     <action selector="playChipmunk:" destination="9pz-39-pGC" eventType="touchUpInside" id="jsQ-Xp-myG"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yth-mr-gwT">
-                                <rect key="frame" x="258.5" y="285" width="83" height="30"/>
+                                <rect key="frame" x="258" y="212" width="83" height="30"/>
                                 <state key="normal" title="Darth Vader"/>
                                 <connections>
                                     <action selector="playDarthVader:" destination="9pz-39-pGC" eventType="touchUpInside" id="Kjz-vy-wb1"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OKd-d0-qRL">
-                                <rect key="frame" x="274.5" y="374" width="51" height="30"/>
-                                <state key="normal" title="Testing"/>
+                                <rect key="frame" x="260" y="301" width="80" height="30"/>
+                                <state key="normal" title="Flamboyant"/>
                                 <connections>
-                                    <action selector="playTesting" destination="9pz-39-pGC" eventType="touchUpInside" id="7Rf-Pd-I0U"/>
+                                    <action selector="flamboyantEffect" destination="9pz-39-pGC" eventType="touchUpInside" id="ToD-Ca-Bww"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.5" maxValue="2" translatesAutoresizingMaskIntoConstraints="NO" id="qd8-dE-bx5">
+                                <rect key="frame" x="132" y="455" width="336" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="332" id="dcL-37-mT1"/>
+                                    <constraint firstAttribute="height" constant="30" id="yzC-eI-dks"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="rateChanged:" destination="9pz-39-pGC" eventType="touchUpInside" id="jQg-gM-DN7"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pitch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lki-OM-hE4">
+                                <rect key="frame" x="280" y="422" width="39" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDF-DC-0fq">
+                                <rect key="frame" x="282" y="496" width="35" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="-2400" maxValue="2400" translatesAutoresizingMaskIntoConstraints="NO" id="rFt-mT-uIy">
+                                <rect key="frame" x="132" y="380" width="336" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="CYq-zV-cVa"/>
+                                    <constraint firstAttribute="width" constant="332" id="uGP-Fb-kco"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="pitchChanged:" destination="9pz-39-pGC" eventType="touchUpInside" id="CHp-Nm-GJf"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="63b-W4-nLr">
+                                <rect key="frame" x="271.5" y="571.5" width="57.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="sP0-rP-6A6">
+                                <rect key="frame" x="132" y="531" width="336" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="CIP-tA-87G"/>
+                                    <constraint firstAttribute="width" constant="332" id="aoq-2l-S1z"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="332" id="ede-bg-C0z"/>
+                                    <constraint firstAttribute="height" constant="30" id="jkI-aU-sd7"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="CIP-tA-87G"/>
+                                        <exclude reference="ede-bg-C0z"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="rateChanged:" destination="9pz-39-pGC" eventType="touchUpInside" id="WH7-4n-asZ"/>
+                                    <action selector="volumeChanged:" destination="9pz-39-pGC" eventType="touchUpInside" id="Je5-dt-aX8"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="qd8-dE-bx5" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="1vr-mC-xPB"/>
+                            <constraint firstItem="63b-W4-nLr" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="3Sa-VY-aqk"/>
+                            <constraint firstItem="KDF-DC-0fq" firstAttribute="top" secondItem="qd8-dE-bx5" secondAttribute="bottom" constant="11.5" id="5xU-M7-JSR"/>
                             <constraint firstItem="Jaa-RJ-T8j" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="9i3-1r-Pw1"/>
+                            <constraint firstItem="qd8-dE-bx5" firstAttribute="top" secondItem="lki-OM-hE4" secondAttribute="bottom" constant="12" id="CaQ-Nn-gv2"/>
+                            <constraint firstItem="63b-W4-nLr" firstAttribute="top" secondItem="sP0-rP-6A6" secondAttribute="bottom" constant="10" id="HeG-SH-Fi3"/>
+                            <constraint firstItem="tRz-zL-5cK" firstAttribute="top" secondItem="KDF-DC-0fq" secondAttribute="bottom" constant="83" id="IM9-eZ-c1J"/>
                             <constraint firstItem="OKd-d0-qRL" firstAttribute="top" secondItem="Yth-mr-gwT" secondAttribute="bottom" constant="59" id="Jb1-wA-BGf"/>
+                            <constraint firstItem="tRz-zL-5cK" firstAttribute="top" secondItem="63b-W4-nLr" secondAttribute="bottom" constant="8" id="SZw-8w-y2H"/>
+                            <constraint firstItem="sP0-rP-6A6" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="TqZ-53-9lw"/>
                             <constraint firstItem="OKd-d0-qRL" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="WIU-vl-c5c"/>
                             <constraint firstItem="Yth-mr-gwT" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="a3O-aK-dIK"/>
-                            <constraint firstItem="Yth-mr-gwT" firstAttribute="centerY" secondItem="BIv-3K-hvx" secondAttribute="centerY" id="gpc-tX-aje"/>
+                            <constraint firstItem="Yth-mr-gwT" firstAttribute="centerY" secondItem="BIv-3K-hvx" secondAttribute="centerY" constant="-73" id="gpc-tX-aje"/>
                             <constraint firstItem="Yth-mr-gwT" firstAttribute="top" secondItem="Jaa-RJ-T8j" secondAttribute="bottom" constant="50" id="h15-qW-4zK"/>
+                            <constraint firstItem="KDF-DC-0fq" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="haA-rC-rCj"/>
+                            <constraint firstItem="rFt-mT-uIy" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="nTb-F8-nv5"/>
+                            <constraint firstItem="lki-OM-hE4" firstAttribute="centerX" secondItem="BIv-3K-hvx" secondAttribute="centerX" id="rib-XR-bhC"/>
+                            <constraint firstItem="lki-OM-hE4" firstAttribute="top" secondItem="rFt-mT-uIy" secondAttribute="bottom" constant="12.5" id="t8b-Cz-CUr"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QWZ-6I-np0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="674" y="398"/>
+            <point key="canvasLocation" x="722" y="398"/>
         </scene>
     </scenes>
 </document>
