--- a/Voice Effects Demo/Base.lproj/Main.storyboard
+++ b/Voice Effects Demo/Base.lproj/Main.storyboard
@@ -62,10 +62,23 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lTD-U7-E3J">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Pa-p3-U5k">
+                                        <rect key="frame" x="264" y="517" width="72" height="30"/>
+                                        <state key="normal" title="Play Audio"/>
+                                        <connections>
+                                            <action selector="playAudioButtonPressed" destination="fMB-W7-xF6" eventType="touchUpInside" id="eFp-0e-2HM"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="4Pa-p3-U5k" firstAttribute="centerX" secondItem="lTD-U7-E3J" secondAttribute="centerX" id="Pbo-CT-aOd"/>
+                                    <constraint firstAttribute="bottom" secondItem="4Pa-p3-U5k" secondAttribute="bottom" constant="33" id="Yf8-hf-Wy1"/>
+                                </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UKD-Bp-Z7x">
-                                <rect key="frame" x="275" y="514" width="49" height="30"/>
+                                <rect key="frame" x="275" y="481" width="49" height="30"/>
                                 <state key="normal" title="Record"/>
                                 <connections>
                                     <action selector="recordButtonPressed:" destination="fMB-W7-xF6" eventType="touchUpInside" id="8Ih-ck-wK6"/>
@@ -74,7 +87,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="nqB-cM-0Oh" firstAttribute="top" secondItem="UKD-Bp-Z7x" secondAttribute="bottom" constant="56" id="IKB-ma-bIa"/>
+                            <constraint firstItem="nqB-cM-0Oh" firstAttribute="top" secondItem="UKD-Bp-Z7x" secondAttribute="bottom" constant="89" id="IKB-ma-bIa"/>
                             <constraint firstItem="UKD-Bp-Z7x" firstAttribute="centerX" secondItem="RQ7-1F-zYx" secondAttribute="centerX" id="Lls-wC-Lic"/>
                             <constraint firstItem="lTD-U7-E3J" firstAttribute="top" secondItem="Df8-O4-eha" secondAttribute="bottom" id="WFG-Cj-VhM"/>
                             <constraint firstAttribute="bottom" secondItem="lTD-U7-E3J" secondAttribute="bottom" id="Yyf-2a-gqZ"/>
